syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.grpc.server";

service GrpcService {
 rpc getGrpc(HelloRequest) returns (HelloResponse){};
}

message HelloRequest {
 string request = 1;
}

message HelloResponse {
 string response = 1;
}